<resources>
    <string name="app_name">Inventoree</string>

    <!-- Deletion options -->
    <string name="main_action_delete">Wipe data</string>
    <string name="editor_action_delete">Delete product</string>
    <string name="main_delete_success">All products deleted</string>
    <string name="main_delete_failure">Failed to delete products</string>
    <string name="editor_delete_success">Product deleted</string>
    <string name="editor_delete_failure">Failed to delete product</string>

    <!-- Activity title bars -->
    <string name="editor_title_new">Add product</string>
    <string name="editor_title_edit">Edit product</string>

    <!-- Labels for list_item elements in MainActivity -->
    <string name="list_item_price_label">Price: $</string>
    <string name="list_item_stock_label">Stock: </string>
    <string name="list_item_buy_button">Buy</string>

    <!-- Labels, buttons, hints for EditorActivity fields -->
    <string name="editor_product_image_desc">Product picture</string>
    <string name="editor_product_image_label">Picture</string>
    <string name="editor_product_name_label">Name</string>
    <string name="editor_product_price_label">Price</string>
    <string name="editor_product_stock_label">Stock</string>
    <string name="editor_product_name_hint">Type product name</string>
    <string name="editor_product_price_hint">$0.00</string>
    <string name="editor_product_stock_hint">0</string>
    <string name="editor_cancel_button">Cancel</string>
    <string name="editor_save_button">Save</string>
    <string name="editor_increment_button">+</string>
    <string name="editor_decrement_button">-</string>
    <string name="editor_order_button">Submit order</string>
    <string name="editor_order_no_name">You can\'t order a product without a name</string>
    <string name="editor_oder_no_stock">You can\'t place an order for quantity of 0</string>

    <!-- Toast string for EditorActivity -->
    <string name="no_name_product">Product must have a name</string>
    <string name="no_price_product">Product must have a price</string>
    <string name="no_stock_product">Product must have a quantity</string>
    <string name="no_image_product">Product must have an image</string>
    <string name="product_update_success">Product updated</string>
    <string name="product_update_failure">Failed to update product</string>
    <string name="product_save_success">Product saved</string>
    <string name="product_save_failure">Unable to save product</string>

    <!-- Placeholders for content_main for building out UI -->
    <string name="tools_empty">No products in inventory</string>

    <!-- Placeholders for list_item for building out UI -->
    <string name="tools_list_item_product">Product name</string>
    <string name="tools_list_item_price_val">0.00</string>
    <string name="tools_list_item_stock_val">0</string>

    <!-- Dialogue strings -->
    <string name="unsaved_changes_dialog_msg">Discard changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Are you sure you want to delete this product?</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all products?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_abort">Abort</string>
</resources>
