<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context="com.example.zachg.inventoree.EditorActivity">

    <TextView
        android:id="@+id/product_image_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/EditorLabels"
        android:text="@string/editor_product_image_label" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="1dp"
        android:layout_height="479dp"
        android:background="@color/colorPrimary"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/product_image_label"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        app:layout_constraintLeft_toRightOf="@id/separator"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="openImageChooser"
        android:src="@mipmap/ic_product_image"/>

    <TextView
        android:id="@+id/product_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_button"
        style="@style/EditorLabels"
        android:text="@string/editor_product_name_label" />

    <EditText
        android:id="@+id/product_name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/separator"
        app:layout_constraintTop_toBottomOf="@id/image_button"
        style="@style/EditorInputs"
        android:hint="@string/editor_product_name_hint"/>

    <EditText
        android:id="@+id/product_price_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toBottomOf="@id/product_name_input"
        app:layout_constraintLeft_toRightOf="@id/separator"
        style="@style/EditorInputs"
        android:hint="@string/editor_product_price_hint" />

    <TextView
        android:id="@+id/product_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/product_name_label"
        style="@style/EditorLabels"
        app:layout_constraintTop_toBottomOf="@id/product_name_label"
        app:layout_constraintBottom_toBottomOf="@id/product_price_input"
        android:text="@string/editor_product_price_label" />

    <Button
        android:id="@+id/decrement_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:background="@drawable/button_border"
        app:layout_constraintLeft_toLeftOf="@id/product_price_input"
        app:layout_constraintTop_toBottomOf="@id/product_price_input"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="decrementStock"
        android:text="@string/editor_decrement_button" />

    <EditText
        android:id="@+id/product_stock_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/product_price_input"
        app:layout_constraintLeft_toRightOf="@id/decrement_button"
        style="@style/EditorInputs"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingRight="8dp"
        android:paddingEnd="8dp"
        android:hint="@string/editor_product_stock_hint"/>

    <Button
        android:id="@+id/increment_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:background="@drawable/button_border"
        app:layout_constraintLeft_toRightOf="@id/product_stock_input"
        app:layout_constraintTop_toBottomOf="@id/product_price_input"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        android:onClick="incrementStock"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/editor_increment_button" />

    <TextView
        android:id="@+id/product_stock_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="@id/product_price_label"
        style="@style/EditorLabels"
        app:layout_constraintTop_toBottomOf="@id/product_price_label"
        app:layout_constraintBottom_toBottomOf="@id/product_stock_input"
        android:text="@string/editor_product_stock_label" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@android:color/transparent"
        android:textColor="@color/colorAccent"
        android:onClick="cancel"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/editor_cancel_button"/>

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/cancel_button"
        app:layout_constraintRight_toRightOf="parent"
        android:textColor="@color/colorPrimary"
        android:background="@drawable/button_border"
        android:onClick="save"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/editor_save_button"/>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="order"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@android:color/transparent"
        android:text="@string/editor_order_button"/>

</android.support.constraint.ConstraintLayout>
