<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/product_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        style="@style/EditorPad"
        tools:text="@string/tools_list_item_product"/>

    <!-- Price label and value -->
    <TextView
        android:id="@+id/price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/product_label"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/EditorPad"
        android:text="@string/list_item_price_label"/>

    <TextView
        android:id="@+id/price_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@id/price_label"
        app:layout_constraintTop_toBottomOf="@id/product_label"
        tools:text="@string/tools_list_item_price_val"/>

    <!-- Stock label and value -->
    <TextView
        android:id="@+id/stock_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintTop_toBottomOf="@id/product_label"
        app:layout_constraintLeft_toRightOf="@id/price_val"
        style="@style/EditorPad"
        android:text="@string/list_item_stock_label"/>

    <TextView
        android:id="@+id/stock_val"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        app:layout_constraintLeft_toRightOf="@id/stock_label"
        app:layout_constraintTop_toBottomOf="@id/product_label"
        tools:text="@string/tools_list_item_stock_val"/>

    <Button
        android:id="@+id/buy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/button_border"
        android:textColor="@color/colorPrimary"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:onClick="buyProduct"
        android:focusable="false"
        android:text="@string/list_item_buy_button"/>

</android.support.constraint.ConstraintLayout>
